JamNNTPd version 0.6 alpha from 2003-12-21.
 - Configurable charset handling based on CHS files in the GoldED+ format.

 - Greatly improved MIME-handling. JamNNTPd now handles both quoted-printable
   and base64 in both headers and message body when posting messages. Message
   headers containing non-ascii characters are encoded when displayed unless
   the -noencode option is used.

 - Now supports "quoting" with backslash as described in RFC-822.

 - New command-line option -origin

 - New command-line option -keepsoftcr

 - Support for TZUTC/TZUTCINFO kludges. Thanks to Peter Karlsson for the patch.
   New command-line option -notzutc.

 - Better parsing of configuration files. You can now use quotes for strings
   containing space characters. "" means an empty string.

 - Groups are now case-insensitive. In addition, "*" now means all groups and
   "-" means no groups.

 - Fixed response code of NEWGROUPS command.

 - LIST ACTIVE and LIST OVERVIEW.FMT are now also supported.

 - JamNNTPd now creates an X-Comment-To header line

 - The signature delimiter "-- " is no longer reflowed when posting with
   format=flowed.

 - All characters <32 are removed in the output of the XOVER command to
   prevent problems.

 - Increased the maximum size for posts from 10 000 bytes to 20 000 bytes.

--- a/src/Makefile.win32
+++ b/src/Makefile.win32
@@ -9,7 +9,7 @@ CC = gcc $(DEFS) -Wall
 RM = del
 STRIP = strip
 
-OBJS = main.o nntpserv.o os_win32.o sockio.o groups.o misc.o xlat.o allow.o login.o
+OBJS = main.o nntpserv.o os_win32.o sockio.o groups.o misc.o xlat.o allow.o login.o mime.o
 
 jamnntpd : $(OBJS)
 	$(CC) -o jamnntpd$(EXESUFFIX) $(OBJS) jamlib/jamlib.a -lwsock32
@@ -39,8 +39,11 @@ xlat.o : xlat.c
 allow.o : allow.c 
 	$(CC) $(PLATFORMDEF) -c allow.c -o allow.o
 
-login.o : login.c 
+login.o : login.c
 	$(CC) $(PLATFORMDEF) -c login.c -o login.o
 
-clean : 
+mime.o : mime.c
+	$(CC) $(PLATFORMDEF) -c mime.c -o mime.o
+
+clean :
 	$(RM) *.o
