JamNNTPd version 0.6 beta 1.
- JamNNTPd can now create an echomail.jam file that contains a list of all
  posted messages. The echomail.jam file can also be used as a semaphore.

- A new -origin switch can be used to override the Organization line for
  the origin.

- It is now possible to override the From name on posts from authenticated
  users. It is also possible to specify a suffix that is added to the From
  name of all unauthenticated users using the -guestsuffix option.

- The -smartquote option no longer removes initial space characters from 
  quoted text

- JamNNTPd no longer crashes when an area cannot be opened.

- The body text of posts that started with a blank line were lost in 
  previous versions. This has now been fixed.

- Upgraded JAMLIB to version 1.3.2.

- Other minor fixes and improvements.

--- a/src/Makefile.linux
+++ b/src/Makefile.linux
@@ -11,7 +11,13 @@ STRIP = strip
 
 OBJS = main.o nntpserv.o os_linux.o sockio.o groups.o misc.o xlat.o allow.o login.o mime.o
 
-jamnntpd : $(OBJS)
+targets: jamnntpd$(EXESUFFIX) makechs$(EXESUFFIX)
+
+makechs$(EXESUFFIX): makechs.c
+	$(CC) $(PLATFORMDEF) makechs.c -o makechs
+	$(STRIP) makechs$(EXESUFFIX)
+
+jamnntpd$(EXESUFFIX): $(OBJS)
 	$(CC) -o jamnntpd$(EXESUFFIX) $(OBJS) jamlib/jamlib.a -lpthread
 	$(STRIP) jamnntpd$(EXESUFFIX)
 
