JamNNTPd version 1.0 beta 4.
- Introduced the -readorigin switch that makes JamNNTPd read addresses
  from the origin line instead of the JAM headers.

- "To: name" can be used on the first line of posted messages to set an 
  alternative recipient name.

- Added partial support for LIST NEWSGROUPS so that JamNNTPd also works 
  with Lynx.

- Fixed broken backspace quoting on From line.

- "jamnntpd -h" is more helpful.

- Error messages were cleaned up a bit.

- The Windows version now tries to display error messages instead of 
  Winsock error codes. Only works on newer versions of Windows. 

- Makechs now hopefully compiles without errors on *BSD.

- Cleaned up the build process a bit.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,7 @@
 # type either "make linux" or "make win32" to compile
 
+MAKE = make
+
 help:
 	@echo You can use this Makefile in the following ways:
 	@echo make linux ............ Make Linux binaries
@@ -8,17 +10,17 @@ help:
 	@echo make cleanwin32 ....... Remove object files under Win32
 
 linux :
-	make -C jamlib -f Makefile.linux
-	make -f Makefile.linux
+	$(MAKE) -C jamlib -f Makefile.linux
+	$(MAKE) -f Makefile.linux
 
 win32 :
-	make -C jamlib -f Makefile.win32
-	make -f Makefile.win32
+	$(MAKE) -C jamlib -f Makefile.win32
+	$(MAKE) -f Makefile.win32
 
 cleanlinux :
-	make -C jamlib -f Makefile.linux clean
-	make -f Makefile.linux clean
+	$(MAKE) -C jamlib -f Makefile.linux clean
+	$(MAKE) -f Makefile.linux clean
 
 cleanwin32 :
-	make -C jamlib -f Makefile.win32 clean
-	make -f Makefile.win32 clean
+	$(MAKE) -C jamlib -f Makefile.win32 clean
+	$(MAKE) -f Makefile.win32 clean
