Ported to OS/2.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-# type either "make linux" or "make win32" to compile
+# type either "make linux", "make win32" or "make os2" to compile
 
 MAKE = make
 
@@ -6,8 +6,10 @@ help:
 	@echo You can use this Makefile in the following ways:
 	@echo make linux ............ Make Linux binaries
 	@echo make win32 ............ Make Win32 binaries
+	@echo make os2   ............ Make OS/2 binaries (EMX)
 	@echo make cleanlinux ....... Remove object files under Linux
 	@echo make cleanwin32 ....... Remove object files under Win32
+	@echo make cleanos2 ......... Remove object files under OS/2 (EMX)
 
 linux :
 	$(MAKE) -C jamlib -f Makefile.linux
@@ -17,6 +19,10 @@ win32 :
 	$(MAKE) -C jamlib -f Makefile.win32
 	$(MAKE) -f Makefile.win32
 
+os2 :
+	$(MAKE) -C jamlib -f Makefile.os2
+	$(MAKE) -f Makefile.os2
+
 cleanlinux :
 	$(MAKE) -C jamlib -f Makefile.linux clean
 	$(MAKE) -f Makefile.linux clean
@@ -24,3 +30,8 @@ cleanlinux :
 cleanwin32 :
 	$(MAKE) -C jamlib -f Makefile.win32 clean
 	$(MAKE) -f Makefile.win32 clean
+
+cleanos2 :
+	$(MAKE) -C jamlib -f Makefile.os2 clean
+	$(MAKE) -f Makefile.os2 clean
+
