Imported Upstream version 0.6

--- a/src/Makefile.linux
+++ b/src/Makefile.linux
@@ -3,15 +3,21 @@
 # General
 
 PLATFORMDEF = -DPLATFORM_LINUX
-EXESUFFIX = 
+EXESUFFIX =
 
 CC = gcc $(DEFS) -Wall
 RM = rm -f
 STRIP = strip
 
-OBJS = main.o nntpserv.o os_linux.o sockio.o groups.o misc.o xlat.o allow.o login.o
+OBJS = main.o nntpserv.o os_linux.o sockio.o groups.o misc.o xlat.o allow.o login.o mime.o
 
-jamnntpd : $(OBJS)
+targets: jamnntpd$(EXESUFFIX) makechs$(EXESUFFIX)
+
+makechs$(EXESUFFIX): makechs.c
+	$(CC) $(PLATFORMDEF) makechs.c -o makechs
+	$(STRIP) makechs$(EXESUFFIX)
+
+jamnntpd$(EXESUFFIX): $(OBJS)
 	$(CC) -o jamnntpd$(EXESUFFIX) $(OBJS) jamlib/jamlib.a -lpthread
 	$(STRIP) jamnntpd$(EXESUFFIX)
 
@@ -41,6 +47,9 @@ allow.o : allow.c
 
 login.o : login.c 
 	$(CC) $(PLATFORMDEF) -c login.c -o login.o
+
+mime.o : mime.c
+	$(CC) $(PLATFORMDEF) -c mime.c -o mime.o
 
 clean :
 	$(RM) *.o
