Set package Description in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -9,5 +9,8 @@ Homepage: https://bitbucket.org/johanbilling/jamnntpd/src/
 Package: jamnntpd
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: NNTP Server allowing newsreaders to access a JAM messagebase
+ JamNNTPd is an attempt to merge Fidonet technology with modern Usenet
+ newsreaders. Basically, JamNNTPd is NNTP server that allows newsreaders
+ to access a JAM messagebase. (If you didn't understand a word of this, you
+ may not want to use JamNNTPd anyway).
