--- a/debian/rules
+++ b/debian/rules
@@ -1,77 +1,22 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
+# debian/rules for jamnntpd
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+%:
+	dh $@
 
-
-
-
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	# Add here commands to configure the package.
-
-	touch configure-stamp
-
-
-build: build-stamp
-
-build-stamp: configure-stamp  
-	dh_testdir
-
-	# Add here commands to compile the package.
-	$(MAKE) -C src linux
-
-	touch $@
-
-clean: 
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	# Add here commands to clean up after the build process.
+override_dh_auto_clean:
 	$(MAKE) -C src cleanlinux
 
-	dh_clean 
+override_dh_auto_build:
+	$(MAKE) -C src linux
 
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/jamnntpd
 
-	# Add here commands to install the package into debian/jamnntpd.
-	dh_install src/jamnntpd /usr/sbin
-	dh_install src/makechs /usr/sbin
+override_dh_installdocs:
+	dh_installdocs --link-doc=jamnntpd
 
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
+override_dh_strip:
+	dh_strip --dbg-package=jamnntpd-dbg
 
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
-	dh_installexamples
-#	dh_install
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installinit
-#	dh_installcron
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+.PHONY: override_dh_strip
