--- a/debian/rules
+++ b/debian/rules
@@ -13,6 +13,9 @@ override_dh_auto_build:
 override_dh_auto_install:
 	dh_auto_install --destdir=debian/jamnntpd
 
+override_dh_installchangelogs:
+	dh_installchangelogs History.txt
+
 override_dh_installdocs:
 	dh_installdocs --link-doc=jamnntpd
 
