--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9.0.0)
 Standards-Version: 3.9.4
 Homepage: https://bitbucket.org/johanbilling/jamnntpd/src/
 Vcs-Git: git://git.code.sf.net/p/ftnapps/jamnntpd/code
-Vcs-Browser: http://http://sourceforge.net/p/ftnapps/jamnntpd/code
+Vcs-Browser: http://sourceforge.net/p/ftnapps/jamnntpd/code
 
 Package: jamnntpd
 Architecture: any
