Change to using SourceForge project as Homepage URL in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9.0.0)
 Standards-Version: 3.9.5
-Homepage: https://bitbucket.org/johanbilling/jamnntpd/src/
+Homepage: http://ftnapps.sourceforge.net/jamnntpd.html
 Vcs-Git: git://git.code.sf.net/p/ftnapps/jamnntpd/code
 Vcs-Browser: http://sourceforge.net/p/ftnapps/jamnntpd/code
 
