--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9.0.0)
 Standards-Version: 3.9.5
 Homepage: http://ftnapps.sourceforge.net/jamnntpd.html
 Vcs-Git: git://git.code.sf.net/p/ftnapps/jamnntpd/code
-Vcs-Browser: http://sourceforge.net/p/ftnapps/jamnntpd/code
+Vcs-Browser: https://sourceforge.net/p/ftnapps/jamnntpd/code
 
 Package: jamnntpd
 Architecture: any
