Use https URL for the 'Vcs-Git' keyword in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9.0.0)
 Standards-Version: 3.9.5
 Homepage: http://ftnapps.sourceforge.net/jamnntpd.html
-Vcs-Git: git://git.code.sf.net/p/ftnapps/jamnntpd/code
+Vcs-Git: https://git.code.sf.net/p/ftnapps/jamnntpd/code
 Vcs-Browser: https://sourceforge.net/p/ftnapps/jamnntpd/code
 
 Package: jamnntpd
