--- a/debian/rules
+++ b/debian/rules
@@ -20,6 +20,6 @@ override_dh_installdocs:
 	dh_installdocs --link-doc=jamnntpd
 
 override_dh_strip:
-	dh_strip --dbg-package=jamnntpd-dbg
+	dh_strip --dbgsym-migration=jamnntpd-dbg (<< currentversion~)
 
 .PHONY: override_dh_strip
