Add setting of hardening flags for package build in debian/rules.

--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,10 @@
 #!/usr/bin/make -f
 # debian/rules for jamnntpd
 
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+
 %:
 	dh $@
 
