--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: jamnntpd
 Section: news
 Priority: optional
 Maintainer: Robert James Clay <jame@rocasa.us>
-Build-Depends: debhelper (>= 9.0.0)
+Build-Depends: debhelper (>= 9.20151219)
 Standards-Version: 4.1.1
 Homepage: http://ftnapps.sourceforge.net/jamnntpd.html
 Vcs-Git: https://git.code.sf.net/p/ftnapps/jamnntpd/code
